# LLMRocketFlightSim

./: .coverage  .gitignore  README.md  atmosphere.csv  benchmark.py  environment.json  example_simulation.py  main.ipynb  main.py  main_config.py  prompt-target.txt  prompt.txt  pyproject.toml  rename_main.py  rocket_interface.py  rocket_prompt.md  rocket_prompt_1000m.txt  sample.ipynb  simulate.py  test.py  trajectory.kml
benchmarks/claude-3-7-sonnet-20250219_20250409_155527/: benchmark_result.json
benchmarks/claude-3-7-sonnet-20250219_20250409_155916/: benchmark_result.json
benchmarks/claude-3-7-sonnet-20250219_20250409_160343/: benchmark_result.json
benchmarks/claude-3-7-sonnet-20250219_apogee_20250409_174327/: benchmark_result.json
benchmarks/deepseek-chat_20250409_160517/: benchmark_result.json
benchmarks/deepseek-chat_20250409_162655/: benchmark_result.json
benchmarks/deepseek-chat_20250409_163801/: benchmark_result.json
benchmarks/deepseek-chat_20250409_164828/: benchmark_result.json
benchmarks/deepseek-reasoner_20250409_162852/: benchmark_result.json
benchmarks/gpt-4.5-preview_apogee_20250409_175539/: benchmark_result.json
benchmarks/gpt-4o-mini_20250409_154813/: benchmark_result.json
benchmarks/gpt-4o-mini_20250409_160816/: benchmark_result.json
benchmarks/gpt-4o-mini_20250409_162857/: benchmark_result.json
benchmarks/gpt-4o_20250409_154429/: benchmark_result.json
benchmarks/gpt-4o_20250409_154644/: benchmark_result.json
benchmarks/gpt-4o_20250409_154738/: benchmark_result.json
benchmarks/gpt-4o_20250409_155130/: benchmark_result.json
benchmarks/gpt-4o_20250409_160456/: benchmark_result.json
benchmarks/gpt-4o_20250409_161129/: benchmark_result.json
benchmarks/gpt-4o_20250409_162451/: benchmark_result.json
benchmarks/gpt-4o_20250409_162907/: benchmark_result.json
benchmarks/gpt-4o_apogee_20250409_174601/: benchmark_result.json
benchmarks/o1-mini_20250409_155601/: benchmark_result.json
benchmarks/o1-mini_20250409_160033/: benchmark_result.json
benchmarks/o1-mini_20250409_160434/: benchmark_result.json
benchmarks/o1-mini_20250409_162648/: benchmark_result.json
benchmarks/o1-mini_apogee_20250409_174549/: benchmark_result.json
benchmarks/o1_20250409_155626/: benchmark_result.json
benchmarks/o1_20250409_160234/: benchmark_result.json
configs/: AeroTech_H128W.eng  AeroTech_K700W.eng
motors/: __init__.py  motor_loader.py
outputs/: config.json  drc_report.txt  dynamic_bullseye_reward.json  landing_accuracy.json  llm_response.txt  reward.json  rocket_config.json  trajectory.kml
rocket_package/: __init__.py  calculate_reward.py  main.py  rocket_designer.py  rocket_interface.py  test.py
rocket_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_folder/: test.ipynb  test.py
utils/: inference.py
(+656 files in other folders)
