[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocket_package"
version = "0.1.0"
description = "A package for simulating rocket designs"
authors = [
    {name = "Toby Simonds", email = "tamassimonds@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "aiohttp>=3.12.15",
    "anthropic>=0.64.0",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "requests>=2.25.1",
    "rocketpy>=1.10.0",
]

[project.urls]
"Homepage" = "https://github.com/toby-simonds/rocket_package"
"Bug Tracker" = "https://github.com/toby-simonds/rocket_package/issues"

[tool.setuptools]
packages=["rocket_package", "rocket_package.src", "rocket_package.configs", "rocket_package.src.models.motors", "rocket_package.src.models", "rocket_package.src.utils", "rocket_package.src.analysis"]

[tool.setuptools.package-data]
rocket_package = ["*.txt", "*.dat"] 
"rocket_package.configs" = ["*.eng", "*.csv", "*.txt"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "matplotlib>=3.5.0",
]
